@@ -60,6 +60,7 @@ export(.checkMFClasses, .getXlevels, .MFclass, .nknots.smspl,
        punif, pweibull, pwilcox, qbeta, qbinom, qcauchy, qchisq, qexp,
        qf, qgamma, qgeom, qhyper, qlnorm, qlogis, qnbinom, qnorm,
        qpois, qqline, qqnorm, qqplot, qsignrank, qt, qtukey, quantile,
+       qr.influence,
        quasi, quasibinomial, quasipoisson, qunif, qweibull, qwilcox,
        r2dtable, rbeta, rbinom, rcauchy, rchisq, read.ftable,
        rect.hclust, reformulate, relevel, reorder, replications,
